--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
            crossorigin=""/>
     </head>
     <body>
-        <div id="mapid"></div>
+        <div id="viz5"></div>
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
            integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
            crossorigin=""></script>
-        <script src="assets/scripts/script.js"></script>
+        <script src="assets/scripts/viz5.js"></script>
     </body>
 </html>
