added back other visualizations

--- a/index.html
+++ b/index.html
@@ -172,6 +172,24 @@
             crossorigin="">
         </script>
         <script
+            src="assets/scripts/viz1.js">
+        </script>
+        <script
+            src="assets/scripts/viz5.js">
+        </script>
+        <script
+            src="assets/scripts/viz3.js">
+        </script>
+        <script
+            src="assets/scripts/viz4.js">
+        </script>
+        <script
+            src="assets/scripts/viz2.js">
+        </script>
+        <script
+            src="assets/scripts/viz6.js">
+        </script>
+        <script
             src="assets/scripts/viz7.js">
         </script>
     </body>
