--- a/index.html
+++ b/index.html
@@ -116,10 +116,16 @@
                     <h3 class="instruction-heading bold">Instructions:</h3>
                     <ol>
                         <li>
-                            Click a station to reveal all outgoing trips.
+                            Click a station to reveal all outgoing trips and riders.
                         </li>
                         <li>
-                            Hover over route or rider to reveal ride information.
+                            Click a route to focus it (hide other routes).
+                        </li>
+                        <li>
+                            Re-click a route to unfocus it (reveal other routes).
+                        </li>
+                        <li>
+                            Hover over a rider to reveal route information.
                         </li>
                     </ol>
                 </div>
@@ -172,12 +178,15 @@
             crossorigin="">
         </script>
         <script
-            src="assets/scripts/viz1.js">
+            src="assets/scripts/lodash.js">
         </script>
+        <!-- <script
+            src="assets/scripts/viz1.js">
+        </script> -->
         <script
             src="assets/scripts/viz5.js">
         </script>
-        <script
+        <!-- <script
             src="assets/scripts/viz3.js">
         </script>
         <script
@@ -191,6 +200,6 @@
         </script>
         <script
             src="assets/scripts/viz7.js">
-        </script>
+        </script> -->
     </body>
 </html>
