added centralized script to load all data and offload to appropriate functions

--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
         <script
             src="assets/scripts/lodash.js">
         </script>
-        <!-- <script
+        <script
             src="assets/scripts/viz1.js">
-        </script> -->
+        </script>
         <script
             src="assets/scripts/viz5.js">
         </script>
-        <!-- <script
+        <script
             src="assets/scripts/viz3.js">
         </script>
         <script
@@ -200,6 +200,9 @@
         </script>
         <script
             src="assets/scripts/viz7.js">
-        </script> -->
+        </script>
+        <script
+            src="assets/scripts/main.js">
+        </script>
     </body>
 </html>
