fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
-                    What are the most popolar Hubway stops?
+                    What are the most popular Hubway stops?
                 </h2>
                 <div id="viz2"></div>
                 <p class="viz-explanation">
-                    The popolarity of a given Hubway station is determined by
-                    calcolating the number of <span class="italic">incoming trips</span> to
-                    and <span class="italic">outgoing trips</span> from it.
+                    The popularity of a given Hubway station is determined by
+                    calculating the number of <span class="italic">incoming trips to</span>
+                    and <span class="italic">outgoing trips from</span> it.
                 </p>
                 <div class="instruction-block">
                     <h3 class="instruction-heading bold">Instructions:</h3>
@@ -66,13 +66,13 @@
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
-                    How do popolar stations relate to popolar trips?
+                    How do popular stations relate to popular trips?
                 </h2>
                 <div id="viz3"></div>
                 <p class="viz-explanation">
                     Each <span class="italic">vertex</span> represents a Hubway bike station. An
                     <span class="italic">edge</span> between two stations represents a trip between
-                    the stations. Popolar trips are determined by counting the frequency of
+                    the stations. Popular trips are determined by counting the frequency of
                     a given start-end station pair.
                 </p>
                 <div class="instruction-block">
@@ -86,11 +86,11 @@
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
-                    When during the day is Hubway most popolar?
+                    When during the day is Hubway most popular?
                 </h2>
                 <div id="viz4"></div>
                 <p class="viz-explanation">
-                    <span class="italic">Hour Popolarity</span> is determined by aggregating the
+                    <span class="italic">Hour Popularity</span> is determined by aggregating the
                     number of Hubway trips within a given hour throughout the day.
                 </p>
                 <div class="instruction-block">
@@ -137,7 +137,7 @@
                 </h2>
                 <div id="viz6"></div>
                 <p class="viz-explanation">
-                    <span class="italic">Monthly Popolarity</span> is determined by aggregating the
+                    <span class="italic">Monthly Popularity</span> is determined by aggregating the
                     number of Hubway trips within a month throughout the year.
                 </p>
                 <div class="instruction-block">
@@ -151,7 +151,7 @@
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
-                    Has Hubway popolarity increased over time?
+                    Has Hubway popularity increased over time?
                 </h2>
                 <div id="viz7"></div>
                 <p class="viz-explanation">
