implemented visualization 6 and completed viz7

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </li>
                     </ol>
                 </div>
-                <p class="data-source"><span class="bold">Data Source: </span>hubwaydatachallenge.org</p>
+                <p class="data-source"><span class="bold">Data Source: </span>Hubway Ride Data 2017 | hubwaydatachallenge.org</p>
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
@@ -144,10 +144,11 @@
                     <h3 class="instruction-heading bold">Instructions:</h3>
                     <ol>
                         <li>
+                            Slide the slider to filter out month entries.
                         </li>
                     </ol>
                 </div>
-                <p class="data-source"><span class="bold">Data Source: </span>hubwaydatachallenge.org</p>
+                <p class="data-source"><span class="bold">Data Source: </span>Hubway Ride Data 2017 | hubwaydatachallenge.org</p>
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
@@ -159,14 +160,7 @@
                     trips in a given year, while <span class="italic">Bubble Size</span> is determined
                     by the number of unique Hubway riders in a given year.
                 </p>
-                <div class="instruction-block">
-                    <h3 class="instruction-heading bold">Instructions:</h3>
-                    <ol>
-                        <li>
-                        </li>
-                    </ol>
-                </div>
-                <p class="data-source"><span class="bold">Data Source: </span>hubwaydatachallenge.org</p>
+                <p class="data-source"><span class="bold">Data Source: </span>Hubway Ride Data 2017 | hubwaydatachallenge.org</p>
             </div>
         </div>
         <script
