--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--        Samira's Div-->
     <div class="container">
     <div class="row">
-        <h1 class="col-md-12">What are the most popular Hubway stops?</h1>
+        <h1 class="col-md-12" style="font-size:37pt; font-weight: 350">What are the most popular Hubway stops?</h1>
         <div id="mapid"></div>
         </div>
     
