--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 </h2>
                 <div id="viz2"></div>
                 <div id="viz2-input-container"></div>
+                <h4 class="viz2-input-label">Filter by Station</h4>
                 <p class="viz-explanation">
                     The popularity of a given Hubway station is determined by
                     calculating the number of <span class="italic">incoming trips to</span>
