--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
                 <div class="instruction-block">
                     <h3 class="instruction-heading bold">Instructions:</h3>
                     <ol>
-                        <li>
+                        <li>Hover over the circles to see which size corresponds to which station.
+                        </li>
+                        <li>Drag the circles to see the connections between stations.
                         </li>
                     </ol>
                 </div>
