--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </li>
                     </ol>
                 </div>
-                <p class="data-source"><span class="bold">Data Source: </span>hubwaydatachallenge.org</p>
+                <p class="data-source"><span class="bold">Data Source: </span>Hubway Ride Data 2017 | hubwaydatachallenge.org</p>
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
@@ -93,7 +93,7 @@
                         </li>
                     </ol>
                 </div>
-                <p class="data-source"><span class="bold">Data Source: </span>hubwaydatachallenge.org</p>
+                <p class="data-source"><span class="bold">Data Source: </span>Hubway Ride Data 2017 | hubwaydatachallenge.org</p>
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
@@ -111,7 +111,7 @@
                         </li>
                     </ol>
                 </div>
-                <p class="data-source"><span class="bold">Data Source: </span>hubwaydatachallenge.org</p>
+                <p class="data-source"><span class="bold">Data Source: </span>Hubway Ride Data 2017 | hubwaydatachallenge.org</p>
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
