--- a/index.html
+++ b/index.html
@@ -61,15 +61,10 @@
                     <h3 class="instruction-heading bold">Instructions:</h3>
                     <ol>
                         <li>
-                            Sum the number of incoming and outgoing stop at each station
+                            Filter stations by magnitude of number of (incoming and outgoing) Hubway trips using slider.
                         </li>
                         <li>
-                            Scale this number linearly using the stations with the max and min popularity to set bounds
-                        </li>
-                        <li>
-                            This scale will be used to determine the relative sizes of our top X stations
-                            <n>
-                            X being determined by the slider on the visualization </n>
+                            Hover over station to reveal additional information.
                         </li>
                     </ol>
                 </div>
@@ -106,13 +101,6 @@
                     <span class="italic">Hour Popularity</span> is determined by aggregating the
                     number of Hubway trips within a given hour throughout the day.
                 </p>
-                <div class="instruction-block">
-                    <h3 class="instruction-heading bold">Instructions:</h3>
-                    <ol>
-                        <li>
-                        </li>
-                    </ol>
-                </div>
                 <p class="data-source"><span class="bold">Data Source: </span>Hubway Ride Data 2017 | hubwaydatachallenge.org</p>
             </div>
             <div class="viz-container">
@@ -191,9 +179,9 @@
             src="assets/scripts/viz1.js">
         </script>
         <script
-            src="assets/scripts/viz5.js">
+            src="assets/scripts/viz2.js">
         </script>
-        
+
         <script
             src="assets/scripts/viz3.js">
         </script>
@@ -201,7 +189,7 @@
             src="assets/scripts/viz4.js">
         </script>
         <script
-            src="assets/scripts/viz2.js">
+            src="assets/scripts/viz5.js">
         </script>
         <script
             src="assets/scripts/viz6.js">
