made phrasing changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="viz-container">
                 <h2 class="viz-heading">
-                    What are the most popular Hubway stops?
+                    What are the most popular Hubway Stations?
                 </h2>
                 <div id="viz2"></div>
                 <div id="viz2-input-container"></div>
@@ -159,7 +159,7 @@
                 <p class="viz-explanation">
                     <span class="italic">Bubble position</span> represents the aggregated number of Hubway
                     trips in a given year, while <span class="italic">Bubble Size</span> is determined
-                    by the number of unique Hubway riders in a given year.
+                    by the number of unique Hubway bikes in a given year.
                 </p>
                 <p class="data-source"><span class="bold">Data Source: </span>Hubway Ride Data 2017 | hubwaydatachallenge.org</p>
             </div>
